--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://github.com/dnwton
+url: https://dnwton.github.io/github-pages-template/
 date_format: "ordinal"
 title: dnwton
 subtitle: "我是dnwton"
@@ -10,7 +10,7 @@ description: "dnwton的个人博客"
 keywords: dnwton
 timezone: Asia/Shanghai
 encoding: "utf-8"
-repository: dnwton/dnwton.github.io
+repository: https://github.com/dnwton/github-pages-template
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
     jsdelivr:
